V 5.0 - LogBack-Usage.md updated (Completed)
TBD

 * Priority Check - to be verified further
 * Better segregation of the long article into sub sections (for each flavors).
 * Possibly split each flavor into a diff repo or module :)